Add direct access to Order Board

--- a/stock_picking_extended/i18n/it.po
+++ b/stock_picking_extended/i18n/it.po
@@ -672,3 +672,8 @@ msgstr "Nota nella Riga del DDT"
 #, python-format
 msgid "Is not possible to add product, use only Sale Order"
 msgstr "Non è possibile aggiungere una riga, va fatto solo creando un Ordine di Vendita"
+
+#. module: stock_picking_extended
+#: view:stock.move:0
+msgid "Open Order Board"
+msgstr "Apri Lavagna Ordini"
