--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -4277,7 +4277,7 @@ msgstr "Titolare Conto Bancario"
 #: model:ir.actions.report.xml,name:account.account_account_balance
 #: model:ir.ui.menu,name:account.menu_general_Balance_report
 msgid "Trial Balance"
-msgstr "Bilancino"
+msgstr "Bilancio di Verifica"
 
 #. module: account
 #: model:ir.model,name:account.model_account_invoice_cancel
