[account_invoice_extended] add tax code on invoice line

--- a/account_invoice_extended/i18n/it.po
+++ b/account_invoice_extended/i18n/it.po
@@ -139,3 +139,8 @@ msgstr "Sequenza"
 #: field:stock.picking,account_invoice_id:0
 msgid "Account Invoice"
 msgstr "Fattura"
+
+#. module: account_invoice_extended
+#: field:account.invoice.line,tax_list:0
+msgid "Tax Code"
+msgstr "Cod. Imp."
